# ChangeLog for dev-ruby/activesupport
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activesupport/ChangeLog,v 1.60 2008/05/13 18:16:09 graaff Exp $

  13 May 2008; Hans de Graaff <graaff@gentoo.org> Manifest:
  Redigest packages due to packaging changes upstream, bug 221829

  13 May 2008; Raúl Porcel <armin76@gentoo.org> activesupport-2.0.2.ebuild:
  ia64 stable wrt #221309

  12 May 2008; Markus Rothe <corsair@gentoo.org> activesupport-2.0.2.ebuild:
  Stable on ppc64; bug #221309

  11 May 2008; Ferris McCormick <fmccor@gentoo.org>
  activesupport-2.0.2.ebuild:
  Sparc stable --- part of Bug #221309 --- Good for about 5 months.

  11 May 2008; Markus Meier <maekke@gentoo.org> activesupport-2.0.2.ebuild:
  x86 stable, bug #221309

  11 May 2008; Hans de Graaff <graaff@gentoo.org>
  activesupport-2.0.2.ebuild:
  Stable on amd64, bug #221309

  19 Mar 2008; Hans de Graaff <graaff@gentoo.org> Manifest:
  Redigest due to upstream repackaging

*activesupport-2.0.2 (18 Dec 2007)

  18 Dec 2007; Hans de Graaff <graaff@gentoo.org>
  +activesupport-2.0.2.ebuild:
  Version bump for Rails 2.0.2

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> activesupport-1.4.4.ebuild:
  Stable on ppc64; bug #200159

  21 Oct 2007; Steve Dibb <beandog@gentoo.org> activesupport-1.4.4.ebuild:
  amd64 stable

  18 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  activesupport-1.4.4.ebuild:
  ppc stable, bug #195315

  16 Oct 2007; Raúl Porcel <armin76@gentoo.org> activesupport-1.4.4.ebuild:
  ia64/sparc stable wrt security #195315

  16 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  activesupport-1.4.4.ebuild:
  stable x86, security bug 195315

*activesupport-1.4.4 (13 Oct 2007)

  13 Oct 2007; Hans de Graaff <graaff@gentoo.org>
  +activesupport-1.4.4.ebuild:
  Version bump with security fixes, bug 195315

  13 Oct 2007; Tom Gall <tgall@gentoo.org>
  activesupport-1.4.2.ebuild, activesupport-1.4.3.ebuild: